<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nonification.NotificationActivity"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_send_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_notification"/>

    <Button
        android:id="@+id/btn_create_notification_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_notification_channel"/>

    <Button
        android:id="@+id/btn_big_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/big_text_style"/>

    <Button
        android:id="@+id/btn_big_picture_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/big_picture_style"/>

    <Button
        android:id="@+id/btn_inbox_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inbox_style"/>

    <Button
        android:id="@+id/btn_messaging_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messaging_style"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_notification"
        android:id="@+id/btn_custom_notification"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="进度条通知"
            android:id="@+id/btn_progress_notification"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="更新进度条"
            android:id="@+id/btn_update_progress"
            />
    </LinearLayout>

</LinearLayout>